--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-material",
-  "description": "GatsbyJS Material Blog theme.",
-  "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "name": "levu48",
+  "description": "levu48.com",
+  "version": "0.1.0",
+  "author": "Thach Le <levu48@gmail.com>",
   "dependencies": {
     "babel-plugin-lodash": "^3.3.2",
     "font-awesome": "^4.7.0",
