--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-remark": "^1.7.26",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
+    "netlify-cms": "^1.6.0",
     "react": "^15.6.1",
     "react-disqus-comments": "^1.1.1",
     "react-dom": "^15.6.1",
